2007-11-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* Backporting stable things from the devel/pvanhoof/bs branch to trunk

2007-11-28 Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-dummy-device.c
	Fixed a g_signal_connect which was receiving an invalid user_data
	The device now gets the connection status correctly when it's created
	and no longer reports false connection status changes after 1 second

2007-11-26 Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>
	
	* add a dummy conic device, so libtinymail-maemo does
	  not require libconic anymore

2007-11-25  Philip Van Hoof  <pvanhoof@gnome.org>

	* Using the LOGIN-DELAY of a POP server
	* If LOGIN-DELAY is not given, use 300 seconds as default timeout for
	POP servers
	* Reconnect after the timeout has expired

2007-11-22  Philip Van Hoof  <pvanhoof@gnome.org>

	* Refactored TnyCamelQueue to make more sense
	* Fixed a bug if a message was not available and whe are offline with
	POP accounts
	* Removed unneeded removal of observers (they are weak referenced)
	* Update local_size after getting messages
	* Fix for when you remove something from GMail's webpage, and then
	click on later E-mails (for POP accounts)
	* Fixed regression bug in the TnyCamelQueue refactoring

2007-11-21  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix: the necessity of depth is old, and probably not needed
	anymore. On top of that have I seen backtraces where a g_idle is not
	used where it should be.

2007-11-21  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/pop3/camel-pop3-folder.c:
	(cmd_tocache, cmd_tocache_partial). Modify the attachments detection
	heuristics to avoid false positives on processing html messages with
	meta name.

2007-11-21  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-account.c:
	(on_set_online_done): do not execute the user callback in an idle
	if the connection was cancelled in order to prevent a hang of the