@@ -24,7 +24,8 @@ libtinymailui_gtk_1_0_headers = \
 	tny-gtk-attach-list-model.h \
 	tny-gtk-text-buffer-stream.h \
 	tny-gtk-header-view.h \
-	tny-gtk-password-dialog.h
+	tny-gtk-password-dialog.h \
+	tny-gtk-expander-mime-part-view.h
 
 libtinymailui_gtk_1_0_la_SOURCES = \
 	$(libtinymailui_gtk_1_0_headers) \
@@ -51,7 +52,8 @@ libtinymailui_gtk_1_0_la_SOURCES = \
 	tny-gtk-account-list-model-iterator-priv.h \
 	tny-gtk-text-buffer-stream.c \
 	tny-gtk-header-view.c \
-	tny-gtk-password-dialog.c
+	tny-gtk-password-dialog.c \
+	tny-gtk-expander-mime-part-view.c
 
 libtinymailui_gtk_1_0_la_LIBADD = \
 	$(LIBTINYMAILUI_GTK_LIBS) \
